macOS text replacement feature doesn't work correctly in Thunderbird compose window (works fine in Firefox text entry)
Categories
(Thunderbird :: Message Compose Window, defect)
Tracking
(Not tracked)
People
(Reporter: francesco, Assigned: m_kato)
References
Details
Attachments
(1 file)
From bug 1943560 comment 3:
FF 137: Once you type the shortcut, a bubble with the replacement appears. If you keep typing, the replacement text is automatically accepted and text insertion continues after the replacement text. That's how other Mac applications behave.
TB 137: Once you type the shortcut, a bubble with the replacement appears. You need to accept it explicitly or it doesn't take effect. If you accept, the text is replaced and the cursor is placed at the start of the replacement text. You need to click again after the replacement text to continue typing.
@m_kato: Can that be corrected for Thunderbird?
Comment 1•10 months ago
|
||
(In reply to Francesco from comment #0)
@m_kato: Can that be corrected for Thunderbird?
"Mentions" are not a feature in bugzilla. You must use needinfo
| Assignee | ||
Comment 2•10 months ago
|
||
Simply, autocorrect is off by default on chrome.
Can you please elaborate on your reply:
- The text entry area in the TB compose window is considered chrome?
- As described in comment 0, the replacement text is offered as a "bubble", so the the function is partly there. Is that the "off" state?
- Is there any pref to change the behaviour?
| Assignee | ||
Comment 4•10 months ago
•
|
||
Is there any pref to change the behaviour?
Nothing.
| Assignee | ||
Updated•10 months ago
|
| Assignee | ||
Comment 5•10 months ago
|
||
Also, widget.macos.automatic.text_replacement can control whether turn on/off.
| Assignee | ||
Comment 7•10 months ago
|
||
When content is parent process, text change notification will received into
MaybeDispatchKeypressEvents synchronously. So we should block to dismiss
this panel at this situation.
Comment 9•10 months ago
|
||
| bugherder | ||
| Reporter | ||
Comment 10•10 months ago
|
||
This works nicely now in Thunderbird Daily. Thanks for implementing/fixing it!
Description
•