Bug 1962845 - Don't dismiss text substitution panel on parent process content. r=masayuki

When content is parent process, text change notification will received into
`MaybeDispatchKeypressEvents` synchronously. So we should block to dismiss
this panel at this situation.

Differential Revision: https://phabricator.services.mozilla.com/D247036